--- a/style.css
+++ b/style.css
@@ -150,6 +150,18 @@ nav p:hover {
 @media (max-width: 768px) {
   nav {
     margin-right: 0;
+    font-size: 10pt;
+    padding: 10px;
+    text-align: center;
+  }
+  h1 {
+    text-align: center;
+  }
+  .brand-logo {
+    max-width: 150px;
+  }
+  .card-text {
+    font-size: 15pt;
   }
   }
 }
